# django

./: README.md  db.sqlite3  manage.py  pyproject.toml  scrapy.cfg
quotes/: asgi.py  settings.py  urls.py  wsgi.py
quotesapp/: admin.py  forms.py  models.py  urls.py  views.py
quotesapp/migrations/: 0001_initial.py  0002_authorquote.py  0003_delete_authorquote.py
quotesapp/static/quotesapp/: style.css
quotesapp/templates/quotesapp/: author_detail.html  author_form.html  quote_delete.html  quote_form.html  quote_update.html  tag_detail.html  tag_form.html
scraper/: items.py  middlewares.py  pipelines.py  settings.py
scraper/spiders/: authors_spyder.py  quotes_spyder.py
static/css/: style.css
templates/: base.html  home.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: custom_password_reset.html  custom_password_reset_confirm.html  login.html  profile.html  signup.html
